fixing product card img visibility and login logic

--- a/src/components/home/styles/productCard.css
+++ b/src/components/home/styles/productCard.css
@@ -17,17 +17,8 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
-  transition: opacity 400ms ease-out;
-  opacity: 1;
 }
-.card-product__header:hover .card-product__img {
-  opacity: 0;
-  transition: opacity 400ms ease-out;
-}
-.card-product__header:hover .card-product__img-back {
-  opacity: 1;
-  transition: opacity 400ms ease-out;
-}
+
 .card-product__img-back {
   background-color: white;
   padding: 5px;
